--- a/public/_template/bootstrap/login.tpl.html
+++ b/public/_template/bootstrap/login.tpl.html
@@ -1,40 +1,55 @@
 <div class="container">
 	<form id="login_form" class="form-signin" action="?login.auth"
 		method=post role="form" onsubmit="return false;">
-		<input type="hidden" name="authenticity_token" value="{=authenticity_token}" /> 
+		<!--  -->
+		<input type="hidden" name="authenticity_token"
+			value="{=authenticity_token}" />
+		<!--  -->
 		<input type="hidden" name="returnURI" value="{=returnURI}" />
 		<h2 class="form-signin-heading">Please sign in</h2>
 		<input type="text" id="{=userField}" name="{=userField}"
 			class="form-control" placeholder="User ID" required autofocus>
 		<input type="password" id="{=passField}" name="{=passField}"
-			class="form-control" placeholder="Password" required> <label
-			class="checkbox"> <input type="checkbox" value="remember-me">
-			Remember me
-		</label>
+			class="form-control" placeholder="Password" required>
+		<!--  -->
+		<label class="checkbox"><input type="checkbox"
+			value="remember-me"> Remember me </label>
 		<button id='login_bt' class="btn btn-lg btn-primary btn-block"
 			type="submit">Sign in</button>
 	</form>
 </div>
 
 <script type="text/javascript">
-$(document).on("click", '#login_bt', function() {
-	$.ajax({
-		url : "?login.auth",
-		type : 'POST',
-		data : $("#login_form").serialize(),
-		success : function(res) {
-			res = $.parseJSON(res);
-			if (res.code == 0) {
-				alert(res.message);
-			} else if (res.code == 1) {
-				window.location = res.value;
-				//document.location.href = res.value;
-			} else {
-				alert('Problem with sql query');
+	$(document).on("click",'#login_bt',function() {
+		$.ajax({
+			url : "?login.auth",
+			type : 'POST',
+			dataType : 'json',
+			data : $("#login_form").serialize(),
+			success : function(data, textStatus, jqXHR) {
+				if (data.redirect)
+					window.location.href = data.redirect				
+			},
+			complete : function(data, textStatus, jqXHR) {
+				// 통신이 실패했어도 완료가 되었을 때 이 함수를 타게 된다.
+				// TODO
+			},
+			error : function(jqXHR, textStatus, errorThrown) {
+				if (jqXHR.responseJSON) {
+					message = jqXHR.responseJSON['result'];
+				}
+				/*
+				 * Standard error with standard response text
+				 */
+				else {
+					message = jqXHR.responseText ? jqXHR.responseText
+							: jqXHR.statusText;
+				}
+				
+				if (message)
+				alert(message);
 			}
-			return false;
-		}
+		});
+		return false;
 	});
-	return false;
-});
 </script>
